# ml_baseline_system

./: README.md  pyproject.toml
data/processing/: orders_clean.parquet
reports/: model_card.md
src/ml_baseline/: cli.py  make_sample_feature_table.py
