[project]
name = "ml_baseline_system"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "typer==0.20.1",
    "streamlit==1.52.2",
    "pandas==2.3.3",
    "pyarrow==22.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ml_baseline"]
